@@ -1,3 +1,8 @@
+2004-11-30  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-settings-multimedia-keys.c: (do_exit_action): hack
+	to get the logout action working (Closes: #141472)
+
 2004-10-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.8.1
